// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments DELETE /api/articles/:slug/comments/:id when the user is authenticated and the comment is found and the user is not the comment author should return a forbidden error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Forbidden",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Forbidden",
            "message": "Forbidden",
            "statusCode": 403,
          },
          "statusCode": 403,
        },
      },
      "message": "Forbidden",
    },
  },
  "status": 403,
}
`;

exports[`comments DELETE /api/articles/:slug/comments/:id when the user is authenticated and the comment is found and the user is the comment author should delete the article comment 1`] = `
Object {
  "body": Object {},
  "status": 200,
}
`;

exports[`comments DELETE /api/articles/:slug/comments/:id when the user is authenticated and the comment is not found should return a not found error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;

exports[`comments DELETE /api/articles/:slug/comments/:id when the user is not authenticated should return an unauthorized error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;

exports[`comments GET /api/articles/:slug/comments when the slug is not found should return a not found error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;

exports[`comments POST /api/articles/:slug/comments when the user is authenticated and invalid body params are passed should return an unprocessable entity error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "body": Array [
        "can't be blank",
      ],
    },
  },
  "status": 422,
}
`;

exports[`comments POST /api/articles/:slug/comments when the user is not authenticated should return an unauthorized error 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;
